--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,14 @@
   margin: 0;
   padding: 0;
 }
+
+p{
+  font-size: 24px;
+  color: chocolate;
+  font-weight: 700;
+}
+
+h1{
+  color: chartreuse;
+  background-color: black;
+}
